--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             This game has been optimised for browser usage on a personnal computer.
         </p>
         <p class="legal">
-            Tanguy Scholtés, 2016. <a href="#">GitHub repository</a>.
+            Tanguy Scholtés, 2016. <a href="https://github.com/TanguyScholtes/JSGame">GitHub repository</a>.
         </p>
     </footer>
 
